# remote-controller

./: .gitignore  log.txt  readme.md  settings.gradle
client/: .gitignore  CMakeLists.txt  build.py
client/include/: base64.hpp  client.hpp  frame.hpp  logger.hpp  opcode.hpp  sha1.hpp
client/src/: base64.cpp  client.cpp  frame.cpp  logger.cpp  main.cpp  opcode.cpp
client/test/: base64_test.cpp  logger_test.cpp
controller/: .gitignore  build.gradle
controller/src/main/java/io/github/oxi1224/: Main.java
controller/src/main/java/io/github/oxi1224/common/: Pair.java
controller/src/main/java/io/github/oxi1224/logging/: Logger.java
controller/src/main/java/io/github/oxi1224/remotecontroller/server/: Frame.java  Opcode.java  Server.java  protocol.txt
controller/src/test/java/io/github/oxi1224/remotecontroller/server/: FrameTest.java
src/main/java/io/github/oxi1224/logging/: Logger.java
src/main/java/io/github/oxi1224/remotecontroller/: Main.java
src/main/java/io/github/oxi1224/remotecontroller/server/: Frame.java  FrameParser.java  Server.java
src/test/java/io/github/oxi1224/: MainTest.java
src/test/java/io/github/oxi1224/remotecontroller/: MainTest.java
